crates/ink/tests/ui/contract/fail/impl-block-using-env-no-marker.stderr
error[E0599]: no method named `env` found for reference `&Contract` in the current scope
  --> tests/ui/contract/fail/impl-block-using-env-no-marker.rs:22:26
   |
22 |             let _ = self.env().caller();
   |                          ^^^ method not found in `&Contract`
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
1  | use ink::codegen::Env;
   |
